--- a/process_ui.ipynb
+++ b/process_ui.ipynb
@@ -2,38 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dd67d7d7a7864cf09423b3be1443de05",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HTML(value='\\n<style>\\n.leaflet-pane {\\n    z-index : 2 !important;\\n}\\n.leaflet-top, .leaflet-bottom {\\n    z…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "759358129b6543aab32b325d2b152ccb",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "ResizeTrigger()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from component import io \n",
     "from component import tile"
@@ -41,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,46 +36,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# the result tile needs to be created before the process tile \n",
     "# decide the display order of your tiles in the ui.ipynb notebook\n",
     "fao_visualization = tile.VisualizationTile(aoi_io, process_io)\n",
-    "#fao_export = tile.ExportTile(aoi_io, process_io)\n"
+    "fao_export = tile.ExportTile(aoi_io, process_io)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# create the process tile \n",
-    "fao_process = tile.SelectionTile(aoi_io, process_io, fao_visualization) #, fao_export)"
+    "fao_process = tile.SelectionTile(aoi_io, process_io, fao_visualization, fao_export)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "71dfd25a9d9d4612ba5b9cfb8ffef51e",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "SelectionTile(align_center=True, children=[Card(children=[Html(children=['Parameter selection'], tag='h2'), Fl…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# this tile will only be displayed if this very notebook is launched\n",
     "# useful for debugging\n",
@@ -128,7 +84,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#fao_export"
+    "fao_export"
    ]
   },
   {
@@ -141,6 +97,16 @@
     "# this variable will only be displayed if this very notebook is launched\n",
     "# useful for debugging\n",
     "process_io.__dict__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from component import parameter as pm\n",
+    "pm.measures"
    ]
   },
   {
