--- a/ui.ipynb
+++ b/ui.ipynb
@@ -57,7 +57,7 @@
     "%run 'about_ui.ipynb'\n",
     "\n",
     "# Gather all the partial tiles that you created previously\n",
-    "fao_content = [fao_aoi, fao_process, fao_visualization, fao_about, fao_disclaimer] #fao_export"
+    "fao_content = [fao_aoi, fao_process, fao_visualization, fao_about, fao_disclaimer, fao_export]"
    ]
   },
   {
@@ -72,7 +72,7 @@
     "item_aoi = sw.DrawerItem(ms.app.drawer_item.aoi, 'mdi-map-marker-check', card=\"aoi_widget\").display_tile(fao_content)\n",
     "item_tile = sw.DrawerItem(ms.app.drawer_item.process, 'mdi-cogs', card=\"selection_widget\").display_tile(fao_content)\n",
     "item_visualization= sw.DrawerItem(ms.app.drawer_item.visualization, 'mdi-map', card=\"visualization_widget\").display_tile(fao_content)\n",
-    "#item_export = sw.DrawerItem(ms.app.drawer_item.export, 'mdi-export', card=\"export_widget\").display_tile(fao_content)\n",
+    "item_export = sw.DrawerItem(ms.app.drawer_item.export, 'mdi-export', card=\"export_widget\").display_tile(fao_content)\n",
     "item_about = sw.DrawerItem(ms.app.drawer_item.about, 'mdi-help-circle', card=\"about_widget\").display_tile(fao_content)\n",
     "\n",
     "# !!! not mandatory !!! \n",
@@ -82,7 +82,7 @@
     "issue_link = 'https://github.com/lecrabe/alos_mosaics/issues'\n",
     "\n",
     "# Gather all the draweritems in a list \n",
-    "items = [item_aoi, item_tile, item_visualization,  item_about] #item_export,\n",
+    "items = [item_aoi, item_tile, item_visualization, item_export, item_about]\n",
     "\n",
     "# Create the side drawer with all its components \n",
     "# The display_drawer() method link the drawer with the app bar\n",
